{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 27,
  "lineage": "b3cc2e2e-21be-b2d9-aca9-25c09bff3d52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/613f0cd4b1caf06e",
            "arn_suffix": "app/Terraform-production-alb/613f0cd4b1caf06e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-production-alb-317040983.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/613f0cd4b1caf06e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c5c9d155a157824"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04db22110280b64e7"
              },
              {
                "subnet_id": "subnet-0d07a375b1bb2fc88"
              }
            ],
            "subnets": [
              "subnet-04db22110280b64e7",
              "subnet-0d07a375b1bb2fc88"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-alb"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:internet-gateway/igw-07ad3b9cce8791d41",
            "id": "igw-07ad3b9cce8791d41",
            "owner_id": "828299057084",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-igw"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:listener/app/Terraform-production-alb/613f0cd4b1caf06e/9a6dcaef18f0fdf6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/dae93a158d48ba2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:listener/app/Terraform-production-alb/613f0cd4b1caf06e/9a6dcaef18f0fdf6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/613f0cd4b1caf06e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/dae93a158d48ba2e",
            "arn_suffix": "targetgroup/Terraform-production-tg/dae93a158d48ba2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/dae93a158d48ba2e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Terraform-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-lb-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ad3b9cce8791d41",
            "id": "r-rtb-0d8c0a02626b62f4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8c0a02626b62f4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:route-table/rtb-0d8c0a02626b62f4f",
            "id": "rtb-0d8c0a02626b62f4f",
            "owner_id": "828299057084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-routing-table-public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d63fdba8eaf19a",
            "route_table_id": "rtb-0d8c0a02626b62f4f",
            "subnet_id": "subnet-0d07a375b1bb2fc88"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096e2782e5b5a2a8b",
            "route_table_id": "rtb-0d8c0a02626b62f4f",
            "subnet_id": "subnet-04db22110280b64e7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:security-group/sg-07c5c9d155a157824",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c5c9d155a157824",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221121045934161700000002",
            "name_prefix": "terraform-",
            "owner_id": "828299057084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Terraform-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:security-group/sg-0b36fa33ba48b5114",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b36fa33ba48b5114",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07c5c9d155a157824"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221121045939518300000003",
            "name_prefix": "terraform-",
            "owner_id": "828299057084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Terraform-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-05910a17f9dff8b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05910a17f9dff8b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-1"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-07812e0001c0b74f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07812e0001c0b74f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-2"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-0d07a375b1bb2fc88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d07a375b1bb2fc88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-1"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-04db22110280b64e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db22110280b64e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-2"
            },
            "vpc_id": "vpc-05f87b5e9601ccb1b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:vpc/vpc-05f87b5e9601ccb1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01e3bfaede32362fa",
            "default_route_table_id": "rtb-0276a7e11b6fb2370",
            "default_security_group_id": "sg-088c047bf067bc7f7",
            "dhcp_options_id": "dopt-0e9b3c2546469fb14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05f87b5e9601ccb1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0276a7e11b6fb2370",
            "owner_id": "828299057084",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}